--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native": "0.68.2",
     "react-native-dropdown-picker": "^5.4.2",
     "react-native-safe-area-context": "4.2.4",
+    "react-native-select-dropdown": "^2.0.3",
     "react-native-screens": "~3.11.1",
     "react-native-web": "0.17.7"
   },
