--- a/package.json
+++ b/package.json
@@ -14,14 +14,16 @@
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "expo": "~45.0.0",
+    "expo-av": "~11.2.3",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-countdown-circle-timer": "^3.0.9",
     "react-native-dropdown-picker": "^5.4.2",
     "react-native-safe-area-context": "4.2.4",
-    "react-native-select-dropdown": "^2.0.3",
     "react-native-screens": "~3.11.1",
+    "react-native-select-dropdown": "^2.0.3",
     "react-native-web": "0.17.7"
   },
   "devDependencies": {
