--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
     "react-native": "0.68.2",
     "react-native-countdown-circle-timer": "^3.0.9",
     "react-native-dropdown-picker": "^5.4.2",
+    "react-native-paper": "^4.12.1",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-select-dropdown": "^2.0.3",
-    "react-native-web": "0.17.7"
+    "react-native-web": "0.17.7",
+    "react-native-webview": "11.18.1",
+    "react-native-youtube-iframe": "^2.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
